# BriefKit

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
scripts/bash/: check-prerequisites.sh
scripts/powershell/: check-prerequisites.ps1
src/brief_cli/: __init__.py
src/specify_cli/: __init__.py
templates/: CLAUDE.md  brief-rule.md  checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  brief.context.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
