[project]
name = "brief-cli"
version = "0.1.0"
description = "Brief CLI - Context-first development with MCP integration. Fork of GitHub Spec Kit for Innov Hack."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
brief = "brief_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brief_cli"]

